fixed spacing of image on home page and text alignment om the project info

--- a/src/components/Project.scss
+++ b/src/components/Project.scss
@@ -87,6 +87,7 @@
         font-weight: 300;
         font-size: 1.1rem;
         color: #e6ffe0ff;
+        text-align: center;
       }
 
       .links {
