--- a/src/components/pages/Home.scss
+++ b/src/components/pages/Home.scss
@@ -44,14 +44,18 @@
       visibility: hidden;
     }
 
-    .fairy {
-      width: 280px;
-      position: absolute;
-      top: 8%;
-      left: 20%;
+    .fairy-container {
       animation: fadeIn 2s;
-      animation: shakeY 40s infinite;
+
+      .fairy {
+        width: 280px;
+        position: absolute;
+        top: 100px;
+        left: 20%;
+        animation: shakeY 40s infinite;
     }
+    }
+
 
   } 
 }
@@ -87,9 +91,14 @@
     font-size: 3rem;
     right: 15%;
   }
+
+  .home-page .text-area .fairy-container .fairy {
+    left: 10%;
+    top: 100px;
+  } 
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 900px) {
   
   .home-page .text-area .name {
     font-size: 5rem;
@@ -102,9 +111,9 @@
     right: 10%;
   }
 
-  .home-page .text-area .fairy {
-    left: 10%;
+  .home-page .text-area .fairy-container .fairy {
+    left: 50px;
     width: 230px;
-    top: 20%;
+    top: 150px;
   } 
 }
